--- a/src/app/components/administrator/dashboard/content/content.component.html
+++ b/src/app/components/administrator/dashboard/content/content.component.html
@@ -4,21 +4,21 @@
     </div>
     <div class="users-content">
         <table mat-table [dataSource]="dataSource" class="mat-elevation-z8">
-            <ng-container matColumnDef="id">
-                <th mat-header-cell *matHeaderCellDef> ID </th>
-                <td mat-cell *matCellDef="let element"> {{element.id}} </td>
+            <ng-container matColumnDef="id" >
+                <th mat-header-cell *matHeaderCellDef > Id </th>
+                <td mat-cell *matCellDef="let element" > {{element.id}} </td>
             </ng-container>
-            <ng-container matColumnDef="name">
-                <th mat-header-cell *matHeaderCellDef> Nombre </th>
-                <td mat-cell *matCellDef="let element"> {{element.name}} </td>
+            <ng-container matColumnDef="message" class="mat-column-username">
+                <th mat-header-cell *matHeaderCellDef> Mensaje </th>
+                <td mat-cell *matCellDef="let element"> {{element.message}} </td>
             </ng-container>
-            <ng-container matColumnDef="date">
-                <th mat-header-cell *matHeaderCellDef> Fecha </th>
-                <td mat-cell *matCellDef="let element"> {{element.date}} </td>
+            <ng-container matColumnDef="level">
+                <th mat-header-cell *matHeaderCellDef> Nivel del error </th>
+                <td mat-cell *matCellDef="let element"> {{element.level}} </td>
             </ng-container>
-            <ng-container matColumnDef="description">
-                <th mat-header-cell *matHeaderCellDef> Descripción </th>
-                <td mat-cell *matCellDef="let element"> {{element.description}} </td>
+            <ng-container matColumnDef="timeStamp">
+                <th mat-header-cell *matHeaderCellDef> Fecha y hora </th>
+                <td mat-cell *matCellDef="let element"> {{element.timeStamp}} </td>
             </ng-container>
             <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
             <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
