--- a/src/app/components/administrator/dashboard/content/content.component.css
+++ b/src/app/components/administrator/dashboard/content/content.component.css
@@ -43,3 +43,19 @@ table {
     width: 0;
     background: transparent;
 }
+
+.mat-column-username {
+    word-wrap: break-word !important;
+    white-space: unset !important;
+    flex: 0 0 28% !important;
+    width: 28% !important;
+    overflow-wrap: break-word;
+    word-wrap: break-word;
+  
+    word-break: break-word;
+  
+    -ms-hyphens: auto;
+    -moz-hyphens: auto;
+    -webkit-hyphens: auto;
+    hyphens: auto;
+  }
