--- a/src/app/components/administrator/dashboard/fair-calendar/fair-calendar.component.html
+++ b/src/app/components/administrator/dashboard/fair-calendar/fair-calendar.component.html
@@ -4,7 +4,7 @@
             <h1>{{ viewDate | calendarDate:(view + 'ViewTitle'):'en' }}</h1>
         </div>
         <div class="btn-group">
-            <mat-icon (click)="openDialog()">add</mat-icon>
+            <mat-icon (click)="createEvent()">add</mat-icon>
             <mat-icon mwlCalendarPreviousView [view]="view" [(viewDate)]="viewDate" (viewDateChange)="closeOpenMonthViewDay()">keyboard_arrow_left</mat-icon>
             <mat-icon mwlCalendarNextView [view]="view" [(viewDate)]="viewDate" (viewDateChange)="closeOpenMonthViewDay()">keyboard_arrow_right</mat-icon>
         </div>
