--- a/src/app/components/students/dashboard/past-proyect-proposals/past-proyect-proposals.component.css
+++ b/src/app/components/students/dashboard/past-proyect-proposals/past-proyect-proposals.component.css
@@ -19,13 +19,12 @@
 }
 
 .projects-content {
-    padding-top: 25%;
     padding-bottom: 1rem;
     height: 85%;
     max-height: 85%;
     display: flex;
     justify-content: center;
-    align-items: center;
+    align-items: flex-start;
     overflow: scroll;
 }
 
