--- a/src/app/components/judges/dashboard/qualify-project/qualify-project.component.html
+++ b/src/app/components/judges/dashboard/qualify-project/qualify-project.component.html
@@ -1,104 +1,3 @@
-<!--<div class="flex-container">
-  <div class="top-options">
-      <h1>Rúbrica de calificación para el proyecto {{ projectName }}</h1>
-  </div>
-  <div>
-    <div class="users-content">
-      <table mat-table [dataSource]="datasourceTestTest" class="mat-elevation-z8">
-            <ng-container matColumnDef="aboutIt">
-                <th mat-header-cell *matHeaderCellDef> I.	Planteamiento del problema, cada aspecto vale 2 ptos. Total 10 pts. </th>
-                <td mat-cell *matCellDef="let element"> {{element.aboutIt}} </td>
-            </ng-container>
-            <ng-container [matColumnDef]="col.key" *ngFor="let col of columnsSchemaTest">
-              <th mat-header-cell *matHeaderCellDef>
-                {{ col.label }}
-              </th>
-              <td mat-cell *matCellDef="let element">
-                <div [ngSwitch]="col.type" *ngIf="!element.isEdit">
-                  <div class="btn-edit" *ngSwitchCase="'isEdit'">
-                    <button mat-button (click)="element.isEdit = !element.isEdit">Calificar indicador</button>
-                  </div>
-                  <span *ngSwitchDefault>
-                    {{ element[col.key] }}
-                  </span>
-                </div>
-                <div *ngIf="element.isEdit">
-                  <div class="btn-edit" *ngIf="col.key === 'isEdit'; else dataField">
-                    <button mat-button (click)="element.isEdit = !element.isEdit">Listo</button>
-                  </div>
-                  <ng-template #dataField>
-                    <mat-form-field>
-                      <input
-                        [type]="col.type"
-                        matInput
-                        [(ngModel)]="element[col.key]"
-                      />
-                    </mat-form-field>
-                  </ng-template>
-                </div>
-              </td>
-            </ng-container>
-        <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
-        <tr mat-row *matRowDef="let row; columns: displayedColumns"></tr>
-      </table>
-    </div>
-  </div>
-  <h3 class="space">SubTotal: {{ sub_total_1 }} pts.</h3>
-  <br>-->
-
-<!--<div>
-    <div class="users-content">
-      <table mat-table [dataSource]="dataSource" class="mat-elevation-z8">
-          <ng-container matColumnDef="name">
-              <th mat-header-cell *matHeaderCellDef> Nombre del Proyecto. </th>
-              <td mat-cell *matCellDef="let element"> {{element.name}} </td>
-          </ng-container>
-          <ng-container matColumnDef="description">
-              <th mat-header-cell *matHeaderCellDef> Descripcion </th>
-              <td mat-cell *matCellDef="let element"> {{element.description}} </td>
-          </ng-container>
-          <ng-container matColumnDef="groupLeader">
-              <th mat-header-cell *matHeaderCellDef> Lider del grupo </th>
-              <td mat-cell *matCellDef="let element"> {{element.groupLeader}} </td>
-          </ng-container>
-          <ng-container matColumnDef="category">
-              <th mat-header-cell *matHeaderCellDef> Categoria </th>
-              <td mat-cell *matCellDef="let element"> {{element.category}} </td>
-          </ng-container>
-          <ng-container matColumnDef="qualify">
-            <td mat-cell *matCellDef="let element">
-              <div [ngSwitch]="col.type" *ngIf="!element.isEdit">
-                <div class="btn-edit" *ngSwitchCase="'isEdit'">
-                  <button mat-button (click)="element.isEdit = !element.isEdit">Calificar indicador</button>
-                </div>
-                <span *ngSwitchDefault>
-                  {{ element[col.key] }}
-                </span>
-              </div>
-              <div *ngIf="element.isEdit">
-                <div class="btn-edit" *ngIf="col.key === 'isEdit'; else dataField">
-                  <button mat-button (click)="element.isEdit = !element.isEdit">Listo</button>
-                </div>
-                <ng-template #dataField>
-                  <mat-form-field>
-                    <input
-                      [type]="col.type"
-                      *ngIf="col.key != 'name'"
-                      matInput
-                      [(ngModel)]="element[col.key]"
-                    />
-                    <span *ngIf="col.key == 'name'"> {{element[col.key]}} </span>
-                  </mat-form-field>
-                </ng-template>
-              </div>
-            </ng-container>
-          <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
-          <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
-      </table>
-  </div>
-  </div>-->
-
-<!--1-->
 <div class="flex-container">
     <div class="top-options">
         <h1>Rúbrica de calificación para el proyecto {{ projectName }}</h1>
@@ -116,12 +15,12 @@
                                 <button mat-button (click)="element.isEdit = !element.isEdit">Calificar indicador</button>
                             </div>
                             <span *ngSwitchDefault>
-                  {{ element[col.key] }}
-                </span>
+                                {{ element[col.key] }}
+                            </span>
                         </div>
                         <div *ngIf="element.isEdit">
                             <div class="btn-edit" *ngIf="col.key === 'isEdit'; else dataField">
-                                <button mat-button (click)="element.isEdit = !element.isEdit">Listo</button>
+                                <button mat-button (click)="element.isEdit = !element.isEdit" (mouseup)="increment_subtotals(1, element.pts)">Listo</button>
                             </div>
                             <ng-template #dataField>
                                 <mat-form-field>
@@ -149,15 +48,16 @@
                     <td mat-cell *matCellDef="let element">
                         <div [ngSwitch]="col.type" *ngIf="!element.isEdit">
                             <div class="btn-edit" *ngSwitchCase="'isEdit'">
-                                <button mat-button (click)="element.isEdit = !element.isEdit">Calificar indicador</button>
+                                <button mat-button (click)="element.isEdit = !element.isEdit">Calificar
+                                    indicador</button>
                             </div>
                             <span *ngSwitchDefault>
-                  {{ element[col.key] }}
-                </span>
+                                {{ element[col.key] }}
+                            </span>
                         </div>
                         <div *ngIf="element.isEdit">
                             <div class="btn-edit" *ngIf="col.key === 'isEdit'; else dataField">
-                                <button mat-button (click)="element.isEdit = !element.isEdit">Listo</button>
+                                <button mat-button (click)="element.isEdit = !element.isEdit" (mouseup)="increment_subtotals(2, element.pts)">Listo</button>
                             </div>
                             <ng-template #dataField>
                                 <mat-form-field>
@@ -185,15 +85,16 @@
                     <td mat-cell *matCellDef="let element">
                         <div [ngSwitch]="col.type" *ngIf="!element.isEdit">
                             <div class="btn-edit" *ngSwitchCase="'isEdit'">
-                                <button mat-button (click)="element.isEdit = !element.isEdit">Calificar indicador</button>
+                                <button mat-button (click)="element.isEdit = !element.isEdit">Calificar
+                                    indicador</button>
                             </div>
                             <span *ngSwitchDefault>
-                  {{ element[col.key] }}
-                </span>
+                                {{ element[col.key] }}
+                            </span>
                         </div>
                         <div *ngIf="element.isEdit">
                             <div class="btn-edit" *ngIf="col.key === 'isEdit'; else dataField">
-                                <button mat-button (click)="element.isEdit = !element.isEdit">Listo</button>
+                                <button mat-button (click)="element.isEdit = !element.isEdit" (mouseup)="increment_subtotals(3, element.pts)">Listo</button>
                             </div>
                             <ng-template #dataField>
                                 <mat-form-field>
@@ -221,15 +122,16 @@
                     <td mat-cell *matCellDef="let element">
                         <div [ngSwitch]="col.type" *ngIf="!element.isEdit">
                             <div class="btn-edit" *ngSwitchCase="'isEdit'">
-                                <button mat-button (click)="element.isEdit = !element.isEdit">Calificar indicador</button>
+                                <button mat-button (click)="element.isEdit = !element.isEdit">Calificar
+                                    indicador</button>
                             </div>
                             <span *ngSwitchDefault>
-                  {{ element[col.key] }}
-                </span>
+                                {{ element[col.key] }}
+                            </span>
                         </div>
                         <div *ngIf="element.isEdit">
                             <div class="btn-edit" *ngIf="col.key === 'isEdit'; else dataField">
-                                <button mat-button (click)="element.isEdit = !element.isEdit">Listo</button>
+                                <button mat-button (click)="element.isEdit = !element.isEdit" (mouseup)="increment_subtotals(4, element.pts)">Listo</button>
                             </div>
                             <ng-template #dataField>
                                 <mat-form-field>
@@ -257,15 +159,16 @@
                     <td mat-cell *matCellDef="let element">
                         <div [ngSwitch]="col.type" *ngIf="!element.isEdit">
                             <div class="btn-edit" *ngSwitchCase="'isEdit'">
-                                <button mat-button (click)="element.isEdit = !element.isEdit">Calificar indicador</button>
+                                <button mat-button (click)="element.isEdit = !element.isEdit">Calificar
+                                    indicador</button>
                             </div>
                             <span *ngSwitchDefault>
-                  {{ element[col.key] }}
-                </span>
+                                {{ element[col.key] }}
+                            </span>
                         </div>
                         <div *ngIf="element.isEdit">
                             <div class="btn-edit" *ngIf="col.key === 'isEdit'; else dataField">
-                                <button mat-button (click)="element.isEdit = !element.isEdit">Listo</button>
+                                <button mat-button (click)="element.isEdit = !element.isEdit" (mouseup)="increment_subtotals(5, element.pts)">Listo</button>
                             </div>
                             <ng-template #dataField>
                                 <mat-form-field>
@@ -293,15 +196,16 @@
                     <td mat-cell *matCellDef="let element">
                         <div [ngSwitch]="col.type" *ngIf="!element.isEdit">
                             <div class="btn-edit" *ngSwitchCase="'isEdit'">
-                                <button mat-button (click)="element.isEdit = !element.isEdit">Calificar indicador</button>
+                                <button mat-button (click)="element.isEdit = !element.isEdit">Calificar
+                                    indicador</button>
                             </div>
                             <span *ngSwitchDefault>
-                  {{ element[col.key] }}
-                </span>
+                                {{ element[col.key] }}
+                            </span>
                         </div>
                         <div *ngIf="element.isEdit">
                             <div class="btn-edit" *ngIf="col.key === 'isEdit'; else dataField">
-                                <button mat-button (click)="element.isEdit = !element.isEdit">Listo</button>
+                                <button mat-button (click)="element.isEdit = !element.isEdit" (mouseup)="increment_subtotals(6, element.pts)">Listo</button>
                             </div>
                             <ng-template #dataField>
                                 <mat-form-field>
@@ -329,15 +233,16 @@
                     <td mat-cell *matCellDef="let element">
                         <div [ngSwitch]="col.type" *ngIf="!element.isEdit">
                             <div class="btn-edit" *ngSwitchCase="'isEdit'">
-                                <button mat-button (click)="element.isEdit = !element.isEdit">Calificar indicador</button>
+                                <button mat-button (click)="element.isEdit = !element.isEdit">Calificar
+                                    indicador</button>
                             </div>
                             <span *ngSwitchDefault>
-                  {{ element[col.key] }}
-                </span>
+                                {{ element[col.key] }}
+                            </span>
                         </div>
                         <div *ngIf="element.isEdit">
                             <div class="btn-edit" *ngIf="col.key === 'isEdit'; else dataField">
-                                <button mat-button (click)="element.isEdit = !element.isEdit">Listo</button>
+                                <button mat-button (click)="element.isEdit = !element.isEdit" (mouseup)="increment_subtotals(7, element.pts)">Listo</button>
                             </div>
                             <ng-template #dataField>
                                 <mat-form-field>
@@ -365,15 +270,16 @@
                     <td mat-cell *matCellDef="let element">
                         <div [ngSwitch]="col.type" *ngIf="!element.isEdit">
                             <div class="btn-edit" *ngSwitchCase="'isEdit'">
-                                <button mat-button (click)="element.isEdit = !element.isEdit">Calificar indicador</button>
+                                <button mat-button (click)="element.isEdit = !element.isEdit">Calificar
+                                    indicador</button>
                             </div>
                             <span *ngSwitchDefault>
-                  {{ element[col.key] }}
-                </span>
+                                {{ element[col.key] }}
+                            </span>
                         </div>
                         <div *ngIf="element.isEdit">
                             <div class="btn-edit" *ngIf="col.key === 'isEdit'; else dataField">
-                                <button mat-button (click)="element.isEdit = !element.isEdit">Listo</button>
+                                <button mat-button (click)="element.isEdit = !element.isEdit" (mouseup)="increment_subtotals(8, element.pts)">Listo</button>
                             </div>
                             <ng-template #dataField>
                                 <mat-form-field>
@@ -397,7 +303,7 @@
         <h3 class="space">Nombre: {{ judge_name }}</h3>
         <h3 class="space">Apellidos: {{ judge_last_1 }} {{judge_last_2}}</h3>
         <h3 class="space">Fecha de revision: {{ date }}</h3>
-        <button mat-raised-button class="add-button" [routerLink]="['home']">Calificar proyecto</button>
+        <button mat-raised-button class="add-button" (click)="qualifyProject()">Calificar proyecto</button>
     </div>
 
     <mat-divider horizontal style="height:5%; margin: 0 3%;"></mat-divider>
